--- a/style.css
+++ b/style.css
@@ -173,7 +173,8 @@ main img.pequena {/*Imagens não são consideradas "blocos"*/ /*Configuração i
     position: relative;
     background-color: white;
     height: 0px;
-    margin-left: 5px;
+    margin-left: -15px;
+    margin-right: -1px;
     padding-bottom: 59%;
 }
 
@@ -181,7 +182,7 @@ main img.pequena {/*Imagens não são consideradas "blocos"*/ /*Configuração i
     position: absolute;
     top: 5%; /*Relativo ao afastamento superior do elemento*/
     left: 5%; /*Relativo ao afastamento lateral do elemento a sua direita*/
-    width: 90%; /*Relativo ao tamanho lateral da caixa*/
+    width: 95%; /*Relativo ao tamanho lateral da caixa*/
     height: 90%; /*Relativo a altura da caixa*/
 }
 
