--- a/style.css
+++ b/style.css
@@ -41,8 +41,7 @@ Cores usadas no projeto
 body {
     background-color: var(--cordofundo);
     font-family: var(--fontepadrao);
-
-
+    width: 100%;
 }
 
 a.externo::after {
@@ -105,13 +104,14 @@ nav a:hover {
 
 main {
     background-color: white;
-    min-width: 300px; /*Largura minima da caixa*/
+    min-width: 200px; /*Largura minima da caixa*/
     max-width: 1000px; /*Largura máxima da caixa*/
     margin: auto; /*Centraliza o conteúdo*/
     margin-bottom: 30px; /*Distância entre o conteúdo principal e elementos posteriores...*/
     border-radius: 0px 0px 10px 10px; /*Relativo a arredondamento de borda*/
     padding: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);/*Relativo a sombra em borda/em caixa*/
+    
     
 }
 
@@ -139,6 +139,7 @@ main p {
     font-weight: normal;
     font-size: 1em; /*Relativo a tamanho de fonte.*/
     line-height: 2em;
+    
 }
 
 main strong {
@@ -213,6 +214,7 @@ footer {
     text-align: center;
     font-size: 0.8;
     padding: 5px;
+    
     
 }
 
